--- a/now/index.html
+++ b/now/index.html
@@ -28,14 +28,61 @@
         <div class="measure-wide">
           <ul class="list pa0 mb5">
             <li class="mb3">
-              Researching and developing
+              Hosting a
               <a
                 class="link dark-green hover-green underline"
-                href="https://www.beeldengeluid.nl/en/news/learn-all-about-generous-interfaces"
-                target="_blank"
-                >innovative interfaces for audiovisual collections</a
+                href="https://www.gradu.al/blog/welcome-to-emergent-encounters-at-mozfest-2023"
+                >virtual gardening experience</a
               >
-              at the Netherlands Institute for Sound & Vision.
+              for social serendipity at
+              <a
+                class="link dark-green hover-green underline"
+                href="https://www.gradu.al/blog/welcome-to-emergent-encounters-at-mozfest-2023"
+                >Mozilla Festival 2023</a
+              >.
+            </li>
+            <li class="mb3">
+              Preparing a workshop on interactive hypervideo experiences for
+              <a
+                class="link dark-green hover-green underline"
+                href="https://www.filmschule.de/en/studies/ma-digital-narratives"
+                >MA Digital Narratives students at IFS Cologne</a
+              >.
+            </li>
+            <li class="mb3">
+              At the Netherlands Institute for Sound & Vision, I am
+              <ul>
+                <li>
+                  researching and developing
+                  <a
+                    class="link dark-green hover-green underline"
+                    href="https://www.beeldengeluid.nl/en/news/learn-all-about-generous-interfaces"
+                    target="_blank"
+                    >innovative interfaces for audiovisual collections</a
+                  >
+                </li>
+                <li>
+                  integrating Partial Audio Matching functionality into the
+                  Clariah Media Suite, as part of the
+                  <a
+                    class="link dark-green hover-green underline"
+                    href="https://www.ai4media.eu/"
+                    target="_blank"
+                    >AI4media project</a
+                  >
+                </li>
+                <li>
+                  investigating open and federated tools to support the
+                  discovery and accessiblity of public cultural events, as part
+                  of the
+                  <a
+                    class="link dark-green hover-green underline"
+                    href="https://innovatielabs.org/projecten/living+lab+open+cultuurdata/"
+                    target="_blank"
+                    >Living Lab Open Cultuurdata Project</a
+                  >
+                </li>
+              </ul>
             </li>
             <li class="mb3">
               Growing
@@ -57,51 +104,18 @@
               >.
             </li>
             <li class="mb3">
-              Developing a course on photogrammetric 3D scanning, inspired by
-              the storyworld of
-              <a
-                class="link dark-green hover-green underline"
-                href="https://en.wikipedia.org/wiki/Flatland"
-                target="_blank"
-                >Flatland</a
-              >
-              by Edwin Abbott Abbott, as part of
-              <a
-                class="link dark-green hover-green underline"
-                href="https://hyperlink.academy/"
-                target="_blank"
-                >Hyperlink Academy</a
-              >'s Meta Course.
-            </li>
-            <li class="mb3">
-              Serving on the
-              <a
-                class="link dark-green hover-green underline"
-                href="https://pro.europeana.eu/project/ai-in-relation-to-glams"
-                target="_blank"
-                >EuropeanaTech AI for GLAMs Task Force</a
-              >.
-            </li>
-            <li class="mb3">
-              Co-curating the
-              <a
-                href="https://www.mozillafestival.org/en/uniquely-mozfest/spaces/#creative-ai"
-                target="_blank"
-                class="link dark-green hover-green underline"
-                >Creative AI Space at the 2021 edition of Mozilla Festival</a
-              >.
-            </li>
-            <li class="mb3">
               Learning / practicing
               <ul>
-                <li>drawing</li>
-                <li>speaking German</li>
-                <li>balancing my handstand</li>
+                <li>acrobatics</li>
                 <li>advanced Vue.js web development</li>
+                <li>
+                  how federated architectures can contribute to a healthier
+                  internet
+                </li>
               </ul>
             </li>
           </ul>
-          <p class="o-70 i">This page was last updated: January 2021.</p>
+          <p class="o-70 i">This page was last updated: March 2023.</p>
           <p class="o-70 i">
             This page is inspired by an idea by
             <a
