--- a/now/index.html
+++ b/now/index.html
@@ -39,7 +39,7 @@
         <h1 class="f1">What I'm doing now</h1>
         <div class="measure-wide">
           <ul class="list pa0 mb5">
-            <li class="mb3">
+            <!-- <li class="mb3">
               Hosting a
               <a
                 class="link dark-green hover-green underline"
@@ -52,26 +52,42 @@
                 href="https://www.gradu.al/blog/welcome-to-emergent-encounters-at-mozfest-2023"
                 >Mozilla Festival 2023</a
               >.
-            </li>
-            <li class="mb3">
+            </li> -->
+            <!-- <li class="mb3">
               Preparing a workshop on interactive hypervideo experiences for
               <a
                 class="link dark-green hover-green underline"
                 href="https://www.filmschule.de/en/studies/ma-digital-narratives"
                 >MA Digital Narratives students at IFS Cologne</a
               >.
+            </li> -->
+
+            <li class="mb3">
+              Growing
+              <a
+                class="link dark-green hover-green underline"
+                href="https://storytellers.link/"
+                target="_blank"
+                >a friendly community of innovative storytellers with diversity
+                at its core</a
+              >.
             </li>
+            <li class="mb3">
+              Building
+              <a
+                class="link dark-green hover-green underline"
+                href="https://gradu.al/"
+                target="_blank"
+                >tools for community discovery and connectivity</a
+              >.
+            </li>
+            <li class="mb3"></li>
             <li class="mb3">
               At the Netherlands Institute for Sound & Vision, I am
               <ul>
                 <li>
-                  researching and developing
-                  <a
-                    class="link dark-green hover-green underline"
-                    href="https://www.beeldengeluid.nl/en/news/learn-all-about-generous-interfaces"
-                    target="_blank"
-                    >innovative interfaces for audiovisual collections</a
-                  >
+                  working on a new platform to make the majority of our
+                  audiovisual connection accessible online
                 </li>
                 <li>
                   integrating Partial Audio Matching functionality into the
@@ -97,37 +113,23 @@
               </ul>
             </li>
             <li class="mb3">
-              Growing
-              <a
-                class="link dark-green hover-green underline"
-                href="https://storytellers.link/"
-                target="_blank"
-                >a friendly community of innovative storytellers with diversity
-                at its core</a
-              >.
-            </li>
-            <li class="mb3">
-              Building
-              <a
-                class="link dark-green hover-green underline"
-                href="https://gradu.al/"
-                target="_blank"
-                >tools for intentional community learning</a
-              >.
-            </li>
-            <li class="mb3">
               Learning / practicing
               <ul>
-                <li>acrobatics</li>
-                <li>advanced Vue.js web development</li>
+                <li>standing acrobatics</li>
                 <li>
                   how federated architectures can contribute to a healthier
                   internet
                 </li>
+                <li>
+                  how to build applications that integrate with
+                  <a href="https://joinmastodon.org/" target="_blank"
+                    >Mastodon</a
+                  >
+                </li>
               </ul>
             </li>
           </ul>
-          <p class="o-70 i">This page was last updated: March 2023.</p>
+          <p class="o-70 i">This page was last updated: May 2023.</p>
           <p class="o-70 i">
             This page is inspired by an idea by
             <a
