improve home page font sizes

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         </nav>
       </header>
       <main class="dark-gray">
-        <div class="fw7 lh-title mt5">
-          <h1 class="f1 f-headline-ns">hi! 👋 <br />My name is Philo.</h1>
+        <div class="lh-title mt5">
+          <h1 class="fw7 f2">hi! 👋 <br />My name is Philo.</h1>
 
-          <p class="f2 measure">
+          <p class="fw7 f2 measure">
             I create tools, stories and things in between to amplify human
             connection with arts and culture.
           </p>
-          <p class="f4 measure">
+          <p class="fw4 f4 measure">
             I enjoy working with cultural organisations to create engaging
             visitor experiences, often making use of digital collections,
             storytelling, AI and interaction design.
           </p>
-          <p class="f4 measure">
+          <p class="fw4 f4 measure">
             From my background in Cognitive Science & Artificial Intelligence I
             have a particular interest in theories of mind that understand
             consciousness as something Embodied, Enactive, Extended and
