--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
       </header>
       <main class="dark-gray">
         <div class="lh-title mt5">
-          <h1 class="fw7 f2">hi! 👋 <br />My name is Philo.</h1>
-
-          <p class="fw7 f2 measure">
+          <span class="fw4 f4">hi! 👋 My name is</span>
+          <h1 class="fw7 f2">Philo van Kemenade</h1>
+          <p class="fw7 f4 measure">
             I create tools, stories and things in between to amplify human
             connection with arts and culture.
           </p>
           <p class="fw4 f4 measure">
-            I enjoy working with cultural organisations to create engaging
-            visitor experiences, often making use of digital collections,
-            storytelling, AI and interaction design.
+            I enjoy working with multi disciplinary teams to create engaging
+            experiences that put people in touch with the world around them,
+            making use of digital collections, storytelling, AI and interaction
+            design.
           </p>
           <p class="fw4 f4 measure">
             From my background in Cognitive Science & Artificial Intelligence I
@@ -61,28 +62,19 @@
           >.
         </p>
         <div class="measure">
+          <h2 class="mt4">Currently</h2>
           <p>
-            At the
+            I work at the design agency
             <a
               class="link dark-green hover-green underline fw6"
               target="_blank"
-              href="https://beeldengeluid.nl/en/"
-              >Netherlands Institute for Sound and Vision</a
+              href="https://www.cleverfranke.com/"
+              >CLEVER°FRANKE</a
             >
-            I work on
-            <strong
-              >innovative user interfaces for audiovisual collections</strong
-            >. In the scope of the MediaScape project, I currently investigate
-            the efficacy of ‘generous interfaces’ in the AV archiving field. In
-            the project I combines interaction design with data visualisation to
-            develop a
-            <a
-              class="link dark-green hover-green underline fw6"
-              target="_blank"
-              href="https://mediascape.now.sh/"
-              >series of interface concepts</a
-            >
-            that reveal the scale and complexity of AV collections.
+            as a <strong>senior front-end developer</strong>. In enjoy working
+            on design systems, building interfaces for data driven and
+            AI-powered tools and bridging between technical and client facing
+            perspectives.
           </p>
           <p>
             I run
@@ -107,6 +99,30 @@
                 >join us on Slack</a
               ></strong
             >.
+          </p>
+          <h2 class="mt4">Previously</h2>
+          <p>
+            Between 2019 and 2023 I worked at the
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://beeldengeluid.nl/en/"
+              >Netherlands Institute for Sound and Vision</a
+            >
+            on
+            <strong
+              >innovative user interfaces for audiovisual collections</strong
+            >. In the scope of the MediaScape project, I investigated the
+            efficacy of ‘generous interfaces’ in the AV archiving field. The
+            project combined interaction design with data visualisation to
+            develop a
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://mediascape.now.sh/"
+              >series of interface concepts</a
+            >
+            that reveal the scale and complexity of AV collections.
           </p>
           <p>
             I co-founded the design studio
