--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <main class="dark-gray">
         <div class="lh-title mt5">
           <span class="fw4 f4">hi! 👋 My name is</span>
-          <h1 class="fw7 f2">Philo van Kemenade</h1>
+          <h1 class="fw7 f2 mt2">Philo van Kemenade</h1>
           <p class="fw7 f4 measure">
             I create tools, stories and things in between to amplify human
             connection with arts and culture.
