--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             connection with arts and culture.
           </p>
           <p class="fw4 f4 measure">
-            I enjoy working with multi disciplinary teams to create engaging
+            I enjoy working with multidisciplinary teams to create engaging
             experiences that put people in touch with the world around them,
-            making use of digital collections, storytelling, AI and interaction
-            design.
+            using digital collections, storytelling, AI and interaction design.
           </p>
           <p class="fw4 f4 measure">
             From my background in Cognitive Science & Artificial Intelligence I
