--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               class="link dark-green hover-green underline fw6"
               target="_blank"
               href="https://beeldengeluid.nl/en/"
-              >Netherlands Institute for Sound and Vision</a
+              >Netherlands Institute for Sound & Vision</a
             >
             on
             <strong
@@ -122,6 +122,16 @@
               >series of interface concepts</a
             >
             that reveal the scale and complexity of AV collections.
+          </p>
+          <p>
+            I developed a skill sharing tool, called
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://www.gradu.al/"
+              >Gradual</a
+            >, which helps communities to match members based on their interests
+            & talents.
           </p>
           <p>
             I co-founded the design studio
