--- a/now/index.html
+++ b/now/index.html
@@ -39,99 +39,40 @@
         <h1 class="f1">What I'm doing now</h1>
         <div class="measure-wide">
           <ul class="list pa0 mb5">
-            <!-- <li class="mb3">
-              Hosting a
-              <a
-                class="link dark-green hover-green underline"
-                href="https://www.gradu.al/blog/welcome-to-emergent-encounters-at-mozfest-2023"
-                >virtual gardening experience</a
-              >
-              for social serendipity at
-              <a
-                class="link dark-green hover-green underline"
-                href="https://www.gradu.al/blog/welcome-to-emergent-encounters-at-mozfest-2023"
-                >Mozilla Festival 2023</a
-              >.
-            </li> -->
-            <!-- <li class="mb3">
-              Preparing a workshop on interactive hypervideo experiences for
-              <a
-                class="link dark-green hover-green underline"
-                href="https://www.filmschule.de/en/studies/ma-digital-narratives"
-                >MA Digital Narratives students at IFS Cologne</a
-              >.
-            </li> -->
-
             <li class="mb3">
-              Growing
+              Figuring out how to support the creators of
               <a
                 class="link dark-green hover-green underline"
                 href="https://storytellers.link/"
                 target="_blank"
-                >a friendly community of innovative storytellers with diversity
-                at its core</a
-              >.
-            </li>
-            <li class="mb3">
-              Building
-              <a
-                class="link dark-green hover-green underline"
-                href="https://gradu.al/"
-                target="_blank"
-                >tools for community discovery and connectivity</a
-              >.
+                >storytelling prototypes</a
+              >
+              to take their projects to the next level.
             </li>
             <li class="mb3"></li>
             <li class="mb3">
-              At the Netherlands Institute for Sound & Vision, I am
-              <ul>
-                <li>
-                  working on a new platform to make the majority of our
-                  audiovisual connection accessible online
-                </li>
-                <li>
-                  integrating Partial Audio Matching functionality into the
-                  Clariah Media Suite, as part of the
-                  <a
-                    class="link dark-green hover-green underline"
-                    href="https://www.ai4media.eu/"
-                    target="_blank"
-                    >AI4media project</a
-                  >
-                </li>
-                <li>
-                  investigating open and federated tools to support the
-                  discovery and accessiblity of public cultural events, as part
-                  of the
-                  <a
-                    class="link dark-green hover-green underline"
-                    href="https://innovatielabs.org/projecten/living+lab+open+cultuurdata/"
-                    target="_blank"
-                    >Living Lab Open Cultuurdata Project</a
-                  >
-                </li>
-              </ul>
+              At
+              <a
+                class="link dark-green hover-green underline"
+                target="_blank"
+                href="https://www.cleverfranke.com/"
+                >CLEVER°FRANKE</a
+              >, I am exploring how AI techniques like text embeddings and Large
+              Language Models can be used as human centered tools in data rich
+              applications.
             </li>
             <li class="mb3">
               Learning / practicing
               <ul>
-                <li>standing acrobatics</li>
-                <li>
-                  how federated architectures can contribute to a healthier
-                  internet
-                </li>
-                <li>
-                  how to build applications that integrate with
-                  <a href="https://joinmastodon.org/" target="_blank"
-                    >Mastodon</a
-                  >
-                </li>
+                <li>Partner acrobatics</li>
+                <li>The very humble basics of playing guitar</li>
+                <li>Building web application in React and TypeScript</li>
               </ul>
             </li>
           </ul>
-          <p class="o-70 i">This page was last updated: May 2023.</p>
+          <p class="o-70 i">This page was last updated: February 2024.</p>
           <p class="o-70 i">
-            This page is inspired by an idea by
+            This page is inspired by an idea of
             <a
               class="link dark-green hover-green underline"
               href="https://sive.rs/now"
