add kaspar to now

--- a/now/index.html
+++ b/now/index.html
@@ -62,6 +62,16 @@
               applications.
             </li>
             <li class="mb3">
+              I advice the team of founders at
+              <a
+                class="link dark-green hover-green underline"
+                target="_blank"
+                href="https://www.kasparai.com/"
+                >Kaspar AI</a
+              >, on product development and strategy around their AI powered
+              video editing assistant tooling.
+            </li>
+            <li class="mb3">
               Learning / practicing
               <ul>
                 <li>Partner acrobatics</li>
@@ -70,7 +80,7 @@
               </ul>
             </li>
           </ul>
-          <p class="o-70 i">This page was last updated: February 2024.</p>
+          <p class="o-70 i">This page was last updated: March 2024.</p>
           <p class="o-70 i">
             This page is inspired by an idea of
             <a
