update /bio to /about

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>bio · Philo van Kemenade</title>
+    <title>about · Philo van Kemenade</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -44,10 +44,50 @@
         </nav>
       </header>
       <main>
-        <p class="measure">
-          Things have moved. Please see
-          <a class="link dim dark-green" href="/about">/about</a>
-        </p>
+        <h1>About</h1>
+        <div>
+          <p class="measure">
+            Philo van Kemenade creates tools, stories and things in between to
+            amplify human connection with arts and culture. He works as a senior
+            front-end developer at the design agency
+            <a
+              class="link dark-green hover-green underline"
+              target="_blank"
+              href="https://www.cleverfranke.com/"
+              >CLEVER°FRANKE</a
+            >. Philo co-founded the digital arts & culture festival
+            <a
+              class="link dark-green hover-green underline"
+              target="_blank"
+              href="https://sensorium.is"
+              >Sensorium</a
+            >
+            and is initiator of the
+            <a
+              class="link dark-green hover-green underline"
+              target="_blank"
+              href="https://storytellers.link/"
+              >Storytellers United</a
+            >
+            network. He has a keen interest in learning and human-centered
+            futures of education.
+          </p>
+          <img
+            class="h5"
+            src="./img/philo-van-kemenade-cf.jpg"
+            alt="Headshot of Philo van Kemenade"
+          />
+          <img
+            class="h5"
+            src="./img/philo-van-kemenade-nff.jpg"
+            alt="Philo van Kemenade speaking at the Netherlands Film Festival"
+          />
+          <img
+            class="h5"
+            src="./img/philo-van-kemenade-sensorium.jpg"
+            alt="Philo van Kemenade moderating at Sensorium Festival"
+          />
+        </div>
       </main>
       <footer class="pt5 f7">
         <a
