--- a/projects/index.html
+++ b/projects/index.html
@@ -32,6 +32,10 @@
           <i class="v-mid" data-feather="zap"></i>
           <span class="v-mid">projects</span>
         </a>
+        <a class="link dim dark-green dib mr3 mb3" href="/about" title="about">
+          <i class="v-mid" data-feather="info"></i>
+          <span class="v-mid">about</span>
+        </a>
       </nav>
     </header>
     <iframe
