--- a/emailcharter/index.html
+++ b/emailcharter/index.html
@@ -35,6 +35,14 @@
             <i class="v-mid" data-feather="zap"></i>
             <span class="v-mid">projects</span>
           </a>
+          <a
+            class="link dim dark-green dib mr3 mb3"
+            href="/about"
+            title="about"
+          >
+            <i class="v-mid" data-feather="info"></i>
+            <span class="v-mid">about</span>
+          </a>
         </nav>
       </header>
       <main class="dark-gray">
