--- a/about/index.html
+++ b/about/index.html
@@ -84,8 +84,8 @@
           />
           <img
             class="h5"
-            src="./img/philo-van-kemenade-sensorium.jpg"
-            alt="Philo van Kemenade moderating at Sensorium Festival"
+            src="./img/philo_van_kemenade-nff-extended-moonshot-meeting.jpg"
+            alt="Philo van Kemenade speaking at NFF Extended Moonshot Meeting"
           />
         </div>
       </main>
