--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ layout: base
       href="https://www.cleverfranke.com/"
       >CLEVER°FRANKE</a
     >
-    as a <strong>senior front-end developer</strong>. In enjoy working on design
+    as a <strong>senior front-end developer</strong>. I enjoy working on design
     systems, building interfaces for data driven and AI-powered tools and
     bridging between technical and client facing perspectives.
   </p>
