migrate tachyons to tailwind

--- a/about/index.html
+++ b/about/index.html
@@ -10,15 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   </head>
   <body class="sans-serif dark-gray bg-washed-green">
-    <div class="pa3 pa4-m pa6-l pb4-l">
-      <header class="f7">
-        <nav class="f6">
-          <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
+    <div class="p-4 pa4-m pa6-l pb4-l">
+      <header class="text-lg">
+        <nav class="text-xl">
+          <a class="link dim dark-green inline-block mr3 mb3" href="/" title="home">
             <i class="v-mid" data-feather="home"></i>
             <span class="v-mid">home</span>
           </a>
           <a
-            class="link dim dark-green dib mr3 mb3"
+            class="link dim dark-green inline-block mr3 mb3"
             href="/now"
             title="what I'm doing now"
           >
@@ -26,7 +26,7 @@
             <span class="v-mid">now</span>
           </a>
           <a
-            class="link dim dark-green dib mr3 mb3"
+            class="link dim dark-green inline-block mr3 mb3"
             href="/projects"
             title="projects"
           >
@@ -34,7 +34,7 @@
             <span class="v-mid">projects</span>
           </a>
           <a
-            class="link dim dark-green dib mr3 mb3"
+            class="link dim dark-green inline-block mr3 mb3"
             href="/about"
             title="about"
           >
@@ -89,9 +89,9 @@
           />
         </div>
       </main>
-      <footer class="pt5 f7">
+      <footer class="pt5 text-lg">
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://www.linkedin.com/in/philovk/"
           title="linkedin"
@@ -100,7 +100,7 @@
           <span class="v-mid">linkedin</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://slides.com/phivk/"
           title="slides"
@@ -109,7 +109,7 @@
           <span class="v-mid">slides</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://twitter.com/phivk"
           title="twitter"
@@ -118,7 +118,7 @@
           <span class="v-mid">twitter</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://c.im/@Phivk"
           title="mastodon"
@@ -128,7 +128,7 @@
           <span class="v-mid">mastodon</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://github.com/phivk/"
           title="github"
@@ -137,7 +137,7 @@
           <span class="v-mid">github</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://medium.com/@phivk"
           title="medium"
@@ -146,7 +146,7 @@
           <span class="v-mid">medium</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="http://are.na/philo-van-kemenade/"
           title="are.na"
@@ -155,7 +155,7 @@
           <span class="v-mid">are.na</span>
         </a>
         <a
-          class="link dim dark-green dib mr3 mb3"
+          class="link dim dark-green inline-block mr3 mb3"
           target="_blank"
           href="https://vimeo.com/phivk"
           title="vimeo"
