--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,18 @@ layout: base
 ---
 
 <div class="lh-title mt5">
-  <span class="fw4 f4">hi! 👋 My name is</span>
-  <h1 class="fw7 f2 mt2">Philo van Kemenade</h1>
-  <p class="fw7 f4 measure">
+  <span class="fw4 text-3xl">hi! 👋 My name is</span>
+  <h1 class="fw7 text-5xl mt2">Philo van Kemenade</h1>
+  <p class="fw7 text-3xl measure">
     I create tools, stories and things in between to amplify human connection
     with arts and culture.
   </p>
-  <p class="fw4 f4 measure">
+  <p class="fw4 text-3xl measure">
     I enjoy working with multidisciplinary teams to create engaging experiences
     that put people in touch with the world around them, using digital
     collections, storytelling, AI and interaction design.
   </p>
-  <p class="fw4 f4 measure">
+  <p class="fw4 text-3xl measure">
     From my background in Cognitive Science & Artificial Intelligence I have a
     particular interest in theories of mind that understand consciousness as
     something Embodied, Enactive, Extended and Embedded.
@@ -35,8 +35,8 @@ layout: base
       href="https://www.cleverfranke.com/"
       >CLEVER°FRANKE</a
     >
-    as a <strong>senior front-end developer</strong>. I enjoy working on design
-    systems, building interfaces for data driven and AI-powered tools and
+    as a <strong>senior front-end developer</strong>. Inp enjoy working on
+    design systems, building interfaces for data driven and AI-powered tools and
     bridging between technical and client facing perspectives.
   </p>
   <p>
