--- a/src/now/index.html
+++ b/src/now/index.html
@@ -3,9 +3,9 @@ layout: base
 title: now
 ---
 
-<h1 class="f1">What I'm doing now</h1>
+<h1 class="text-6xl">What I'm doing now</h1>
 <div class="measure-wide">
-  <ul class="list pa0 mb5">
+  <ul class="list p-0 mb5">
     <li class="mb3">
       Figuring out how to support the creators of
       <a
